--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: The Wick Editor Alternatives Database
 description: A bunch of Wick alternatives
-theme: just-the-docs
+#theme: just-the-docs
 
 url: https://just-the-docs.github.io
 
