--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: The Wick Editor Alternatives Database
 description: A bunch of Wick alternatives
 #theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://rubberocket.github.io/wickalt
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
